a bit of revision

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="dist/img/logo.png">
     <link href="dist/output.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Bitco</title>
 </head>
 
 <body>
@@ -44,7 +45,7 @@
                         </li>
                         <li class="group">
                             <a href="#"
-                                class="font-semibold py-2 flex mx-8 lg:bg-secondary hover:opacity-80 duration-500 lg:rounded-full lg:shadow-lg lg:px-7 lg:py-2">Log
+                                class="py-2 flex mx-8 lg:bg-secondary hover:opacity-80 duration-500 lg:rounded-full lg:shadow-lg lg:px-7 lg:py-2 lg:font-semibold">Log
                                 in</a>
                         </li>
                     </ul>
@@ -58,20 +59,21 @@
             <div class="flex flex-wrap justify-center">
                 <div class="w-full lg:w-1/2 lg:py-6 self-center">
                     <h1 class="font-bold text-4xl lg:text-5xl mb-6">
-                        A better way to <span class="text-primary">grow up</span> your <span class="text-secondary">creative business</span>
+                        A better way to <span class="text-primary">grow up</span> your <span
+                            class="text-secondary">creative business</span>
                     </h1>
-                    <p class="text-quaternary mb-6 text-lg lg:text-xl">Now you can list a product once, sell it
+                    <p class="text-quaternary mb-3 text-lg lg:text-xl">Now you can list a product once, sell it
                         everywhere and grow your sales faster.</p>
-                    <div class="flex">
+                    <div class="flex flex-wrap">
                         <input type="email" placeholder="Enter your email address"
-                            class="shadow-lg py-3 px-8 rounded-full focus:outline-none mr-5">
+                            class="shadow-lg py-3 px-8 rounded-full focus:outline-none mr-5 mt-4">
                         <button
-                            class="bg-primary shadow-lg rounded-full py-3 px-8 font-semibold text-white hover:opacity-80 duration-500">Get
+                            class="bg-primary shadow-lg rounded-full py-3 px-8 font-semibold text-white hover:opacity-80 duration-500  mt-4">Get
                             started</button>
                     </div>
                 </div>
-                <div class="w-full lg:w-1/2 py-6 self-end order-first lg:order-last">
-                    <img src="dist/img/investment.svg" alt="">
+                <div class="w-full lg:w-1/2 self-end order-first lg:order-last pt-1 lg:pt-0">
+                    <img src="dist/img/investment.svg" class="mx-auto">
                 </div>
             </div>
         </div>
@@ -81,7 +83,7 @@
         <div class="container mx-auto px-4 lg:px-10">
             <div class="flex flex-wrap justify-center">
                 <div class="w-full lg:w-1/2 p-7 self-end">
-                    <img src="dist/img/goodteam.svg" alt="">
+                    <img src="dist/img/goodteam.svg" class="mx-auto">
                 </div>
                 <div class="w-full lg:w-1/2 py-6 self-center">
                     <h1 class="font-semibold text-4xl mb-6">
@@ -116,14 +118,15 @@
                         started</button>
                 </div>
                 <div class="w-full lg:w-1/2 p-7 self-end order-first lg:order-last">
-                    <img src="dist/img/meeting.svg" alt="">
+                    <img src="dist/img/meeting.svg" class="mx-auto">
                 </div>
             </div>
             <div class="bg-white shadow-xl rounded-md py-7 px-10 mt-32 lg:py-12 lg:px-20">
                 <div class="flex flex-wrap justify-between items-center">
                     <div class="lg:w-1/2 self-center">
                         <h1 class="font-semibold text-2xl mb-3">Start your free trial</h1>
-                        <p class="text-quaternary text-base lg:text-lg mb-6 lg:mb-0">The simplest way to start. Getting started takes just a few moments and we'll be with you every step of the way.</p>
+                        <p class="text-quaternary text-base lg:text-lg mb-6 lg:mb-0">The simplest way to start. Getting
+                            started takes just a few moments and we'll be with you every step of the way.</p>
                     </div>
                     <div class="lg:w-1/2justify-self-center">
                         <button
@@ -134,7 +137,7 @@
             </div>
             <div class="flex flex-wrap justify-center pt-32">
                 <div class="w-full lg:w-1/2 p-7 self-end">
-                    <img src="dist/img/feedback.svg" alt="">
+                    <img src="dist/img/feedback.svg" class="mx-auto">
                 </div>
                 <div class="w-full lg:w-1/2 py-6 self-center">
                     <p class="text-quaternary mb-6 text-base lg:text-lg">
@@ -144,11 +147,11 @@
                         <input type="email" placeholder="Enter your email address"
                             class="w-full bg-slate-100 py-3 px-8 rounded-full focus:outline-none mb-4">
                         <button
-                            class="w-full bg-primary shadow-lg rounded-full py-3 px-8 font-semibold text-white hover:opacity-80 duration-500">Subcriber
+                            class="w-full bg-primary shadow-lg rounded-full py-3 px-8 font-semibold text-white hover:opacity-80 duration-500">Subcribe
                             Here</button>
                     </form>
                     <p class="text-quaternary mt-6 text-base lg:text-lg">
-                        We're committed to your privacy. Bitco uses the information youu provide to us to contact you
+                        We're committed to your privacy. Bitco uses the information you provide to us to contact you
                         about our relevant content, products and services. You may unsubscribe from these communications
                         at any time. For more information, check out our Privacy Policy.
                     </p>
@@ -159,7 +162,7 @@
 
     <footer class="w-full lg:py-16 mt-32 pt-32 border-t border-slate-200 bg-tertiary">
         <div class="container mx-auto px-4 lg:px-10">
-            <div class="flex flex-wrap">
+            <div class="flex flex-wrap justify-between">
                 <div class="w-full md:w-1/4 mb-10 lg:mb-0">
                     <h1
                         class="font-bold text-5xl mb-3 before:block before:absolute before:-inset-1 before:ml-12  before:bg-secondary relative inline-block">
@@ -194,7 +197,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="w-full md:w-1/4">
+                <div class="w-full md:w-1/4 mb-10 lg:mb-0">
                     <h5 class="font-bold mb-6 text-primary">Social</h5>
                     <ul>
                         <li class="text-quaternary mb-3 text-base hover:cursor-pointer hover:text-secondary">Twitter
